resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd-toi
  labels:
    name: argocd-toi
