resources/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-toi
spec:
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: argocd-toi
  sessionAffinity: None
  type: ClusterIP
